--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,67 +1,4 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
-#
-
-# Basic Airflow cluster configuration for CeleryExecutor with Redis and PostgreSQL.
-#
-# WARNING: This configuration is for local development. Do not use it in a production deployment.
-#
-# This configuration supports basic configuration using environment variables or an .env file
-# The following variables are supported:
-#
-# AIRFLOW_IMAGE_NAME         - Docker image name used to run Airflow.
-#                              Default: apache/airflow:master-python3.8
-# AIRFLOW_UID                - User ID in Airflow containers
-#                              Default: 50000
-# AIRFLOW_GID                - Group ID in Airflow containers
-#                              Default: 50000
-# _AIRFLOW_WWW_USER_USERNAME - Username for the administrator account.
-#                              Default: airflow
-# _AIRFLOW_WWW_USER_PASSWORD - Password for the administrator account.
-#                              Default: airflow
-#
-# Feel free to modify this file to suit your needs.
----
 version: '3'
-x-airflow-common:
-  &airflow-common
-  build: .
-  image: ${AIRFLOW_IMAGE_NAME:-extending_airflow:latest}
-  environment:
-    &airflow-common-env
-    AIRFLOW__CORE__EXECUTOR: LocalExecutor
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-    AIRFLOW__CORE__FERNET_KEY: ''
-    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
-    AIRFLOW__SCHEDULER__MIN_FILE_PROCESS_INTERVAL: 10
-
-    REDDIT_CLIENT_ID: 'x8EPb0JZK4Fv4PxNBthO6Q'
-    REDDIT_CLIENT_SECRET: 'T4OpRH6JCAfSrDdp86iOytW1uAGHLA'
-    REDDIT_USER: 'my user agent'
-
-  volumes:
-    - ./airflow/dags:/opt/airflow/dags
-    - ./airflow/logs:/opt/airflow/logs
-    - ./airflow/plugins:/opt/airflow/plugins
-  user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
-  depends_on:
-    postgres:
-      condition: service_healthy
 
 services:
   postgres:
@@ -70,8 +7,8 @@ services:
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
-      # POSTGRES_DB: airflow
       POSTGRES_MULTIPLE_DATABASES: memes_db,airflow
+
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
       - ./init-multiple-db.sh:/docker-entrypoint-initdb.d/init-multiple-db.sh
@@ -84,9 +21,21 @@ services:
     restart: always
 
   airflow-webserver:
-    <<: *airflow-common
-    # command: bash -c "airflow db reset --yes && airflow standalone" #9BkXkwfxSFgHMSbm
+    build: .
+    image: ${AIRFLOW_IMAGE_NAME:-extending_airflow:latest}
+
     command: bash /opt/airflow/init-airflow.sh
+    environment:
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
+      AIRFLOW__CORE__FERNET_KEY: ''
+      AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
+      AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
+      AIRFLOW__SCHEDULER__MIN_FILE_PROCESS_INTERVAL: 10
+      REDDIT_CLIENT_ID: ${REDDIT_CLIENT_ID}
+      REDDIT_CLIENT_SECRET: ${REDDIT_CLIENT_SECRET}
+      REDDIT_USER: ${REDDIT_USER}
+
     volumes:
       - ./init-airflow.sh:/opt/airflow/init-airflow.sh
       - ./airflow/dags:/opt/airflow/dags
@@ -101,21 +50,12 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
+    depends_on:
+      postgres:
+        condition: service_healthy
 
-  airflow-scheduler:
-    <<: *airflow-common
-    command: scheduler
-    restart: always
 
-  airflow-init:
-    <<: *airflow-common
-    command: version
-    environment:
-      <<: *airflow-common-env
-      _AIRFLOW_DB_UPGRADE: 'true'
-      _AIRFLOW_WWW_USER_CREATE: 'true'
-      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
-      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
 
   minio:
     image: quay.io/minio/minio
@@ -125,7 +65,7 @@ services:
       - "9000:9000"
       - "9001:9001"
     volumes:
-    - "~/minio/data:/data"
+    - ./minio/data:/data
     
     command: server /data --console-address ":9001"
 
@@ -143,3 +83,4 @@ services:
 
 volumes:
   postgres-db-volume:
+
